# Projects

Arduino/Project #2/: Lab6.ino
C++ Programming/Optimization Algorithms/Project #1/: CMakeLists.txt
C++ Programming/Optimization Algorithms/Project #1/DOxygen/html/: classfunctions.html  classutilities-members.html  classutilities.html  functions_8h_source.html  matrix_8h_source.html
C++ Programming/Optimization Algorithms/Project #1/DOxygen/latex/: annotated.tex  classfunctions.tex  classmatrix.tex  classutilities.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc
C++ Programming/Optimization Algorithms/Project #1/Documentation/html/: annotated.html  classes.html  classfunctions-members.html  classmatrix-members.html  classmatrix.html  files.html  utilities_8h_source.html
C++ Programming/Optimization Algorithms/Project #1/Documentation/latex/: annotated.tex  classfunctions.tex  classmatrix.tex  classutilities.tex  refman.tex
C++ Programming/Optimization Algorithms/Project #1/Inputs/: input_file.csv  ranges.csv
C++ Programming/Optimization Algorithms/Project #1/Readme/: Readme.aux  Readme.tex  Readme.toc
C++ Programming/Optimization Algorithms/Project #1/Results/: fitness.csv  run_times.csv  stats_dim_10.csv  stats_dim_20.csv  stats_dim_30.csv
C++ Programming/Optimization Algorithms/Project #1/Source/: functions.h  main.cpp  matrix.cpp  matrix.h  project1.R  statistics.R  utilities.cpp  utilities.h
C++ Programming/Optimization Algorithms/Project #1/report/: project1_report.aux  project1_report.tex  project1_report.toc
(+1469 files in other folders)
