cmake_minimum_required(VERSION 2.8.9)
project (project1)
add_executable(project1 functions.cpp)
add_executable(project1 functions.h)
add_executable(project1 main.cpp)
add_executable(project1 matrix.cpp)
add_executable(project1 matrix.h)
add_executable(project1 utilities.cpp)
add_executable(project1 utilities.h)
add_executable(project1 statistics.R)
add_executable(project1 project1.R)
